update utils section

--- a/docs/2.utils/1.request.md
+++ b/docs/2.utils/1.request.md
@@ -4,7 +4,66 @@ icon: material-symbols-light:input
 
 # Request
 
-> Utilities to access incoming request
+> H3 request utilities.
+
+## Body
+
+<!-- automd:jsdocs src="../../src/utils/body.ts" -->
+
+### `readBody(event)`
+
+Reads request body and tries to parse using JSON.parse or URLSearchParams.
+
+**Example:**
+
+```ts
+app.get("/", async (event) => {
+  const body = await readBody(event);
+});
+```
+
+### `readValidatedBody(event, validate)`
+
+Tries to read the request body via `readBody`, then uses the provided validation schema or function and either throws a validation error or returns the result.
+
+You can use a simple function to validate the body or use a Standard-Schema compatible library like `zod` to define a schema.
+
+**Example:**
+
+```ts
+app.get("/", async (event) => {
+  const body = await readValidatedBody(event, (body) => {
+    return typeof body === "object" && body !== null;
+  });
+});
+```
+
+**Example:**
+
+```ts
+import { z } from "zod";
+app.get("/", async (event) => {
+  const objectSchema = z.object({
+    name: z.string().min(3).max(20),
+    age: z.number({ coerce: true }).positive().int(),
+  });
+  const body = await readValidatedBody(event, objectSchema);
+});
+```
+
+<!-- /automd -->
+
+## Cache
+
+<!-- automd:jsdocs src="../../src/utils/cache.ts" -->
+
+### `handleCacheHeaders(event, opts)`
+
+Check request caching headers (`If-Modified-Since`) and add caching headers (Last-Modified, Cache-Control) Note: `public` cache control will be added by default
+
+<!-- /automd -->
+
+## More Request Utils
 
 <!-- automd:jsdocs src="../../src/utils/request.ts" -->
 
@@ -216,52 +275,5 @@ app.get("/", (event) => {
 ### `getRequestFingerprint(event, opts)`
 
 Get a unique fingerprint for the incoming request.
-
-<!-- /automd -->
-
-## Body utils
-
-<!-- automd:jsdocs src="../../src/utils/body.ts" -->
-
-### `readBody(event)`
-
-Reads request body and tries to parse using JSON.parse or URLSearchParams.
-
-**Example:**
-
-```ts
-app.get("/", async (event) => {
-  const body = await readBody(event);
-});
-```
-
-### `readValidatedBody(event, validate)`
-
-Tries to read the request body via `readBody`, then uses the provided validation schema or function and either throws a validation error or returns the result.
-
-You can use a simple function to validate the body or use a Standard-Schema compatible library like `zod` to define a schema.
-
-**Example:**
-
-```ts
-app.get("/", async (event) => {
-  const body = await readValidatedBody(event, (body) => {
-    return typeof body === "object" && body !== null;
-  });
-});
-```
-
-**Example:**
-
-```ts
-import { z } from "zod";
-app.get("/", async (event) => {
-  const objectSchema = z.object({
-    name: z.string().min(3).max(20),
-    age: z.number({ coerce: true }).positive().int(),
-  });
-  const body = await readValidatedBody(event, objectSchema);
-});
-```
 
 <!-- /automd -->
