--- a/docs/2.utils/2.response.md
+++ b/docs/2.utils/2.response.md
@@ -4,7 +4,69 @@ icon: material-symbols-light:output
 
 # Response
 
-> Utilities to send response headers and data
+> H3 response utilities.
+
+## Event Stream
+
+<!-- automd:jsdocs src="../../src/utils/event-stream.ts" -->
+
+### `createEventStream(event, opts?)`
+
+Initialize an EventStream instance for creating [server sent events](https://developer.mozilla.org/en-US/docs/Web/API/Server-sent_events/Using_server-sent_events)
+
+**Example:**
+
+```ts
+import { createEventStream, sendEventStream } from "h3";
+
+app.get("/sse", (event) => {
+  const eventStream = createEventStream(event);
+
+  // Send a message every second
+  const interval = setInterval(async () => {
+    await eventStream.push("Hello world");
+  }, 1000);
+
+  // cleanup the interval and close the stream when the connection is terminated
+  eventStream.onClosed(async () => {
+    console.log("closing SSE...");
+    clearInterval(interval);
+    await eventStream.close();
+  });
+
+  return eventStream.send();
+});
+```
+
+<!-- /automd -->
+
+## Sanitize
+
+<!-- automd:jsdocs src="../../src/utils/sanitize.ts" -->
+
+### `sanitizeStatusCode(statusCode?, defaultStatusCode)`
+
+Make sure the status code is a valid HTTP status code.
+
+### `sanitizeStatusMessage(statusMessage)`
+
+Make sure the status message is safe to use in a response.
+
+Allowed characters: horizontal tabs, spaces or visible ascii characters: https://www.rfc-editor.org/rfc/rfc7230#section-3.1.2
+
+<!-- /automd -->
+
+## Serve Static
+
+<!-- automd:jsdocs src="../../src/utils/static.ts" -->
+
+### `serveStatic(event, options)`
+
+Dynamically serve static assets based on the request path.
+
+<!-- /automd -->
+
+## More Response Utils
 
 <!-- automd:jsdocs src="../../src/utils/response.ts" -->
 
