--- a/docs/2.utils/99.community.md
+++ b/docs/2.utils/99.community.md
@@ -4,26 +4,13 @@ icon: lets-icons:external
 
 # Community
 
-> Utils from community 💛
+> H3 utils from community.
 
 You can use external H3 event utilities made by the community.
 
-## `h3-typebox`
+This section is placeholder for any new H3 version 2 compatible community library.
+<br>
+<br>
 
-:read-more{to="https://github.com/kevinmarrec/h3-typebox"}
-
-## `h3-zod`
-
-:read-more{to="https://github.com/wobsoriano/h3-zod"}
-
-## `h3-valibot`
-
-:read-more{to="https://github.com/intevel/h3-valibot"}
-
-## `h3-compression`
-
-:read-more{to="https://github.com/CodeDredd/h3-compression"}
-
-## `@intlify/h3`
-
-:read-more{to="https://github.com/intlify/h3"}
+> [!TIP]
+> 💛 PR is more than welcome to list yours.
