--- a/docs/1.guide/0.index.md
+++ b/docs/1.guide/0.index.md
@@ -26,6 +26,8 @@ Composable utilities has several advantages:
 
 All utilities, share an [H3Event](/guide/api/h3event) context.
 
+:read-more{to="/utils" title="built-in H3 utilities"}
+
 ## Quick Start
 
 Install `h3` as a dependency:
@@ -101,7 +103,7 @@ We also have [`app.fetch`](/guide/api/h3#h3fetch) which can be directly used to 
 
 :read-more{to="/guide/api/h3#h3fetch" title="H3.fetch"}
 
-```js [test.mjs]
+```js
 import { H3, serve } from "h3";
 
 const app = new H3().get("/", () => "⚡️ Tadaa!");
