--- a/docs/2.utils/0.index.md
+++ b/docs/2.utils/0.index.md
@@ -2,8 +2,77 @@
 icon: ph:function-bold
 ---
 
-# Utils
-
-> Keep your severs light and fast with composables.
+# H3 Utils
 
 H3 is a composable framework. Instead of providing a big core, you start with a lightweight [app instance](/guide/app) and for every functionality, there is either a built-in utility or you can make yours.
+
+<!-- prettier-ignore-start -->
+::card-group
+
+::card
+---
+title: Request
+icon: material-symbols-light:input
+to: /utils/request
+---
+Utilities for incoming request.
+::
+
+::card
+---
+title: Response
+icon: material-symbols-light:output
+to: /utils/response
+---
+Utilities for preparing and sending response.
+::
+
+::card
+---
+title: Cookie
+icon: material-symbols:cookie-outline
+to: /utils/cookie
+---
+Cookie utilities.
+::
+
+::card
+---
+title: Security
+icon: wpf:key-security
+to: /utils/security
+---
+Security utilities.
+::
+
+::card
+---
+title: Proxy
+icon: arcticons:super-proxy
+to: /utils/proxy
+---
+Proxy utilities.
+::
+
+::card
+---
+title: More
+icon: ri:more-line
+to: /utils/more
+---
+More Utilities.
+::
+
+::card
+---
+title: Community
+icon: pixelarticons:github
+to: /utils/community
+---
+Community made utilities.
+::
+
+
+::
+
+<!-- prettier-ignore-end -->
