--- a/docs/2.utils/0.index.md
+++ b/docs/2.utils/0.index.md
@@ -4,7 +4,7 @@ icon: ph:function-bold
 
 # H3 Utils
 
-H3 is a composable framework. Instead of providing a big core, you start with a lightweight [app instance](/guide/app) and for every functionality, there is either a built-in utility or you can make yours.
+H3 is a composable framework. Instead of providing a big core, you start with a lightweight [H3](/guide/api/h3) instance and for every functionality, there is either a built-in utility or you can make yours.
 
 <!-- prettier-ignore-start -->
 ::card-group
