refactor: `defineEventHandler` => `defineHandler`

--- a/docs/1.guide/1.basics/4.handler.md
+++ b/docs/1.guide/1.basics/4.handler.md
@@ -6,26 +6,26 @@ icon: mdi:function
 
 > An event handler is a function that receives an H3Event and returns a response.
 
-You can define typed event handlers using `defineEventHandler`.
+You can define typed event handlers using `defineHandler`.
 
 ```js
-import { H3, defineEventHandler } from "h3";
+import { H3, defineHandler } from "h3";
 
 const app = new H3();
 
-const handler = defineEventHandler((event) => "Response");
+const handler = defineHandler((event) => "Response");
 
 app.get("/", handler);
 ```
 
 > [!NOTE]
-> Using `defineEventHandler` is optional.
+> Using `defineHandler` is optional.
 > You can instead, simply use a function that accepts an [`H3Event`](/guide/api/h3event) and returns a response.
 
 The callback function can be sync or async:
 
 ```js
-defineEventHandler(async (event) => "Response");
+defineHandler(async (event) => "Response");
 ```
 
 You can optionally register some [middleware](/guide/basics/middleware) to run with event handler to intercept request, response or errors.
@@ -33,7 +33,7 @@ You can optionally register some [middleware](/guide/basics/middleware) to run w
 ```js
 import { basicAuth } from "h3";
 
-defineEventHandler({
+defineHandler({
   middleware: [basicAuth({ password: "test" })],
   handler: (event) => "Hi!",
 });
@@ -45,12 +45,10 @@ defineEventHandler({
 
 ## Handler `.fetch`
 
-Event handlers defined with `defineEventHandler`, can act as a web handler without even using [H3](/guide/api/h3) class.
+Event handlers defined with `defineHandler`, can act as a web handler without even using [H3](/guide/api/h3) class.
 
 ```js
-const handler = defineEventHandler(
-  async (event) => `Request: ${event.req.url}`,
-);
+const handler = defineHandler(async (event) => `Request: ${event.req.url}`);
 
 const response = await handler.fetch("http://localhost/");
 console.log(response, await response.text());
@@ -91,9 +89,9 @@ app.all(
 ```
 
 ```js [route.mjs]
-import { defineEventHandler } from "h3";
+import { defineHandler } from "h3";
 
-export default defineEventHandler((event) => "Hello!");
+export default defineHandler((event) => "Hello!");
 ```
 
 ## Converting to Handler
