--- a/docs/1.guide/1.basics/5.response.md
+++ b/docs/1.guide/1.basics/5.response.md
@@ -11,7 +11,7 @@ Values returned from [Event Handlers](/guide/basics/handler) are automatically c
 **Example:** Simple event handler function.
 
 ```js
-const handler = defineEventHandler((event) => ({ hello: "world" }));
+const handler = defineHandler((event) => ({ hello: "world" }));
 ```
 
 H3 smartly converts handler into:
@@ -39,7 +39,7 @@ If an error is thrown, H3 automatically handles it with error handler.
 Before returning a response in main handler, you can prepare response headers and status using [`event.res`](/guide/api/h3event#eventres).
 
 ```js
-defineEventHandler((event) => {
+defineHandler((event) => {
   event.res.status = 200;
   event.res.statusText = "OK";
   event.res.headers.set("Content-Type", "text/html");
