--- a/docs/99.blog/1.v1.8.md
+++ b/docs/99.blog/1.v1.8.md
@@ -60,7 +60,7 @@ H3 now supports native [Readable Stream](https://developer.mozilla.org/en-US/doc
 Leveraging this functionality is straightforward—simply return a [Readable Stream](https://developer.mozilla.org/en-US/docs/Web/API/ReadableStream) or [Response](https://developer.mozilla.org/en-US/docs/Web/API/Response) object from your event handlers.
 
 ```ts
-export default defineEventHandler((event) => {
+export default defineHandler((event) => {
   setResponseHeader(event, "Content-Type", "text/html");
   const encoder = new TextEncoder();
   const stream = new ReadableStream({
@@ -128,7 +128,7 @@ const userSchema = z.object({
   email: z.string().email(),
 });
 
-export default defineEventHandler(async (event) => {
+export default defineHandler(async (event) => {
   const result = await readValidatedBody(event, (body) =>
     userSchema.safeParse(body),
   ); // or `.parse` to directly throw an error
