--- a/docs/2.utils/4.security.md
+++ b/docs/2.utils/4.security.md
@@ -30,8 +30,8 @@ Apply basic authentication for current request.
 **Example:**
 
 ```ts
-import { defineEventHandler, requireBasicAuth } from "h3";
-export default defineEventHandler(async (event) => {
+import { defineHandler, requireBasicAuth } from "h3";
+export default defineHandler(async (event) => {
   await requireBasicAuth(event, { password: "test" });
   return `Hello, ${event.context.basicAuth.username}!`;
 });
