refactor: `onBeforeResponse` => `onResponse`

--- a/docs/1.guide/1.basics/1.lifecycle.md
+++ b/docs/1.guide/1.basics/1.lifecycle.md
@@ -55,12 +55,12 @@ click C2 "/guide/basics/middleware"
 
 ## 4. Send Response
 
-H3 [converts](/guide/basics/response#response-types) returned value and [prepared headers](/guide/basics/response#preparing-response) into a [Response](https://developer.mozilla.org/en-US/docs/Web/API/Response), calls [`onBeforeResponse`](/guide/api/h3#global-hooks) global hook and finally returns response back to the server fetch handler.
+H3 [converts](/guide/basics/response#response-types) returned value and [prepared headers](/guide/basics/response#preparing-response) into a [Response](https://developer.mozilla.org/en-US/docs/Web/API/Response), calls [`onResponse`](/guide/api/h3#global-hooks) global hook and finally returns response back to the server fetch handler.
 
 ```mermaid
 %%{init: {'theme':'neutral'}}%%
 flowchart LR
- D1["Returned Value => Response"] --> D2["<code>onBeforeResponse(response)</code>"] --> D3["Response"]
+ D1["Returned Value => Response"] --> D2["<code>onResponse(response)</code>"] --> D3["Response"]
 
 click D1 "/guide/basics/response"
 click D2 "/guide/api/h3#global-hooks"
