--- a/docs/99.blog/1.v1.8.md
+++ b/docs/99.blog/1.v1.8.md
@@ -94,7 +94,7 @@ const compression = defineResponseMiddleware((event) => {
 
 export default eventHandler({
   onRequest: [auth],
-  onBeforeResponse: [compression],
+  onResponse: [compression],
   async handler(event) {
     return `Hello ${event.context.auth?.name || "Guest"}`;
   },
