--- a/docs/1.guide/900.api/1.h3.md
+++ b/docs/1.guide/900.api/1.h3.md
@@ -133,7 +133,7 @@ When initializing an H3 app, you can register global hooks:
 
 - `onError`
 - `onRequest`
-- `onBeforeResponse`
+- `onResponse`
 
 These hooks are called for every request and can be used to add global logic to your app such as logging, error handling, etc.
 
@@ -145,7 +145,7 @@ const app = new H3({
   onRequest: (event) => {
     console.log("Request:", event.path);
   },
-  onBeforeResponse: (event) => {
+  onResponse: (event) => {
     console.log("Response:", event.path);
   },
 });
