--- a/docs/99.blog/2.v2-beta.md
+++ b/docs/99.blog/2.v2-beta.md
@@ -1,61 +1,65 @@
 ---
-date: 2024-06-02
+date: 2024-06-09
 category: release
 authors:
   - name: Pooya Parsa
     github: pi0
 ---
 
-# H3 v2-beta - Try it now!
+# H3 v2 beta
 
-> H3 v2-beta is finally ready to try, featuring a complete rewrite based on Web standards, backward compatibility, and a significant performance boost!
+> ⚡ H3 v2 beta is here — fully rewritten on web standards, backward-compatible, and faster than ever!
 
-H3 was born around five years ago in late 2020, during the rise of edge Workers. Early H3 versions, using [unjs/unenv](https://github.com/unjs/unenv) and [Nitro](https://nitro.build), allowed H3 apps to run directly in worker runtimes. Since [v1.8](/blog/v1.8), H3 has enhanced its Web standards compatibility.
+::read-more{to="/guide"}
+Visit the new [**H3 Guide**](/guide) to get started quickly.
+::
 
-H3 v1 was primarily based on Node.js APIs with a compatibility layer for Web standards. Logical choice at the time, given Node.js's popularity amongst JavaScript server runtimes.
+Around five years ago in late 2020, H3 was born during the rise of edge workers. Early H3 versions, using [unjs/unenv](https://github.com/unjs/unenv) and [Nitro](https://nitro.build), allowed deployments to run directly in worker environments with Node.js compatibility. Since [v1.8](/blog/v1.8), H3 has enhanced its web standards compatibility.
 
-Thanks to evolving Web standards and improved runtime support (such as [Deno](https://deno.com/), [Bun](https://bun.sh/), and the latest [Node.js](https://nodejs.org/en)), the ecosystem is now ready to fully embrace Web standards for server development. Benefits include:
+H3 v1 was primarily based on Node.js APIs with a compatibility layer for web standards. Logical choice at the time, given Node.js's popularity amongst JavaScript server runtimes.
+
+Thanks to evolving web standards by initiatives like [WinterTC](https://wintertc.org/) and runtime support in [Deno](https://deno.com/), [Bun](https://bun.sh/), and the latest [Node.js](https://nodejs.org/en), ecosystem is ready to embrace web standards for server development. Benefits include:
 
 - ✅ Cross-runtime interoperability (Node.js, Deno, Bun, Workers, etc.)
-- ✅ Cross-framework compatibility (Hono, Elysia, etc.)
-- ✅ Cross-environment compatibility (shared frontend and backend code)
+- ✅ Cross-framework compatibility (H3, Hono, Elysia, etc.)
+- ✅ Cross-environment compatibility (shared and familiar code between frontend and backend)
 - ✅ Easier server API testing
 
-## Srvx: Universal Server API
+## 💥 Srvx: Universal Web Server API
 
-A major challenge is that Node.js lacks native support for Web-standard HTTP servers. Adapters are needed to bridge `node.http.IncomingMessage` to `Request`, and to handle `Response` via `node.http.ServerResponse`. As existing adapters did not fully meet H3's requirements, We have implemented a [compatibility layer](https://srvx.h3.dev/guide/node) that synchronizes interfaces and achieves up to **90%** of `node:http` performance. Almost the best in class for performances today comparing to alternatives (see [benchmarks](https://github.com/h3js/srvx/tree/main/test/bench-node)).
+A major challenge is that Node.js lacks built-in support for web-standard HTTP servers. For `node:http` compatibility, an adapter is needed to bridge Node.js `IncomingMessage` to web `Request`, and to handle web `Response` via Node.js `ServerResponse`. We have implemented a [compatibility layer](https://srvx.h3.dev/guide/node) that brdiges interfaces and achieves up to **90%** of `node:http` performance. Best in class for performance when compared to alternatives as of writing this post (see [benchmarks](https://github.com/h3js/srvx/tree/main/test/bench-node)).
 
-Furthermore, each runtime that pioneered adopting Web standards for servers did not agree on specific implementation details. Typically, all new server runtimes accept a [`fetch`](https://developer.mozilla.org/en-US/docs/Web/API/Fetch_API)-like handler, using [Request](https://developer.mozilla.org/en-US/docs/Web/API/Request) as input and returning a [Response](https://developer.mozilla.org/en-US/docs/Web/API/Response). However, since Web standards were not initially designed for server contexts, they lack standardized ways to access request context, IP information, handle WebSocket upgrades, or set server options. Consequently, each runtime created its own extensions. Today, initiatives like [WinterTC](https://wintertc.org/faq) aim to establish cross-runtime interoperability over time.
+Runtimes such as [Deno](https://deno.com/), [Bun](https://bun.sh/), and Edge Workers pioneered the adoption of web standards for servers, but they did not agree on the same interface due to lack of enough specs. So how do you access the client IP address and additional context? How do you set the server port and TLS options? How do you handle WebSocket upgrades? Each runtime created its own API.
 
-We created [💥 srvx](https://srvx.h3.dev) out of H3 development branch: An open, robust abstraction layer aiming to unify JavaScript server APIs:
+We have created [💥 srvx](https://srvx.h3.dev): A unified layer that works everywhere almost exactly the same. Compatible with Deno, Bun, Node.js, Service Workers, and Edge Workers.
 
 ```js
-// Compatible with Deno, Bun, Node.js, Service Workers, and Edge
+// Dynamic adapter will be used based export conditions of each runtime
 import { serve } from "srvx";
 
 serve({
   port: 3000,
+  // tls: { cert: "server.crt", key: "server.key" }
   fetch(req) {
-    // req.url, req.ip, req.waitUntil, req.runtime?.{bun,deno,node,cloudflare,...}
+    // Server Extensions: req.ip, req.waitUntil(), req.runtime?.{bun,deno,node,cloudflare,...}
     return new Response("👋 Hello there!");
   },
 });
 ```
 
-> [!NOTE]
-> Srvx encapsulates runtime-specific addons under `request.runtime?`, avoiding extra context objects to be passed around.
+> [!TIP]
+> With [💥 srvx](https://srvx.h3.dev) unifying runtime differences, H3 can remain simpler, focusing exclusively on web standard APIs.
 
-With srvx handling runtime-specific API mappings, H3 can remain simpler, focusing exclusively on Web APIs while ensuring cross-runtime performance and compatibility from srvx.
+## ⚡ H3: Tiny Server Composer 🎶
 
-## H3: Tiny Server Composer 🎶
+We worked hard to minimize and simplify H3’s scope.
 
-Adopting Web APIs and leveraging [💥 srvx](https://srvx.h3.dev) simplified H3’s scope significantly without worry about runtime differences.
-
-- ✅ A Web-standard server optimized for performance.
-- ✅ Simple and typed responses and error handling (return or throw directly).
-- ✅ Fast routing via the tiny router ([🌳 rou3](https://github.com/h3js/rou3)).
-- ✅ Middleware for request, response, and error interception.
-- ✅ Tiny core and lots of composable, treeshakable utilities.
+- 🚀 Web-standard server optimized for [performance](#bare-metal-performance).
+- 👌 Intuitive [typed handlers](/guide/basics/handler), [responses](/guide/basics/response) and [errors](/guide/basics/error).
+- 🌳 Fast [routing](/guide/basics/routing).
+- ⛓️ [Middleware](/guide/basics/middleware) for request, response, and error interception.
+- ➕ Built-in treeshakable [utilities](/utils).
+- ❤️ Maximum compatibility with different runtimes and frameworks.
 
 ```js
 import { H3, serve } from "h3";
@@ -65,9 +69,9 @@ const app = new H3().get("/", () => "⚡️ Tadaa!");
 serve(app, { port: 3000 });
 ```
 
-## Web-Compatible Event Context
+## ✅ Web Standard Event Context
 
-H3 v2 fully embraces Web Platform APIs, minimizing additional conventions in context API.
+H3 embraces web platform APIs such as [Request](https://developer.mozilla.org/en-US/docs/Web/API/Request), [Response](https://developer.mozilla.org/en-US/docs/Web/API/Response), [URL](https://developer.mozilla.org/en-US/docs/Web/API/URL), and [Headers](https://developer.mozilla.org/en-US/docs/Web/API/Headers), minimizing additional conventions in context API.
 
 ```js
 app.any("/**", async (event) => {
@@ -87,9 +91,9 @@ app.any("/**", async (event) => {
 });
 ```
 
-## Chainable Middleware
+## ⛓️ Chainable Middleware
 
-H3 now offers an ergonomic, composable way to chain middleware using `next()` function inspired by [Hono middleware](https://hono.dev/docs/guides/middleware) 💛:
+H3 now offers an ergonomic, composable way to chain middleware using `next()` function (inspired by [Hono middleware](https://hono.dev/docs/guides/middleware) 💛):
 
 ```js [global middleware]
 import { H3 } from "h3";
@@ -146,40 +150,38 @@ const app = new H3().use(
 ```
 
 > [!NOTE]
-> Using `next()` is optional. Middleware can be written like v1 without returning a response.
+> Accepting `next` callback is optional. Middleware can be written like v1 without returning a response.
 
-## Bare-Metal Performance
+## 🔥 Bare-Metal Performance
 
-One classic way to evaluate web frameworks is by comparing RPS (Requests Per Second). However, this metric can be misleading, as it is influenced by external factors such as the OS networking layer and runtime-specific behavior. It also overlooks other important aspects like bundle size and initialization time.
-
-We approached benchmarking with a new system that focuses on measuring the overhead introduced by the framework itself. Our goal is to optimize all relevant measurements together, making it as close as possible to a baseline where H3 is not added or used: Response latency (`app.fetch(request)`), App initialization speed and Bundle size of minimal app.
-
-This method, allowed H3 v2 to have optimized latency improvements per request and dramatically smaller core bundle size. We also made a brand-new tiny router ([🌳 rou3](https://github.com/h3js/rou3)) based on this new metrics.
-
-| Measurement      | H3 v1                                      | 🚀 H3 v2                                                                                      |
-| ---------------- | ------------------------------------------ | --------------------------------------------------------------------------------------------- |
-| Request Handling | Node: 36 µs <br> Bun: 27 µs <br> Deno 7 ms | Node: 7 µs (**5x faster**) <br> Bun: 3 µs (**9x faster**) <br> Deno: 1.2 µs (**156x faster**) |
-| App Bundle Size  | min: 101 kB <br> min+gzip: 39.6 kB         | min: 9,1 kB (**91% smaller**) <br> min+gzip: 3.6 kB (**90% smaller**)                         |
-
-> [!NOTE]
-> The benchmarks above compare the H3 core using the **Web Standard** target and do not include adapters. They are intended primarily for internal optimization purposes. See the [benchmark sources](https://github.com/h3js/h3/tree/main/test/bench) for details.
+We approached benchmarking with a new method that focuses on measuring the overhead introduced by the framework itself, rather than the network layer. Our goal is to optimize all relevant measurements together, making the numbers as close as possible to a baseline where no framework is added or used. This method allowed H3 to achieve optimized latency improvements per request and a dramatically smaller core bundle size.
 
 > [!TIP]
-> New request handling times are nearly equivalent to (sometimes faster than) using plain `fetch` and `new URL(req.url).pathname` for routing.
+> H3 v2 performance is nearly identical to plain `fetch` handler with `new URL(req.url).pathname` for routing. In other words, you get the benefits of H3 with nearly zero performance cost!
 
-## Migration from Version 1
+| Measurement      | H3 v1                                      | 🚀 H3 v2                                                                                                  |
+| ---------------- | ------------------------------------------ | --------------------------------------------------------------------------------------------------------- |
+| Request Handling | Node: 36 µs <br> Bun: 27 µs <br> Deno 7 ms | Node: **7 µs** (**5x faster**) <br> Bun: **3 µs** (**9x faster**) <br> Deno: **1.2 µs** (**156x faster**) |
+| App Bundle Size  | min: 101 kB <br> min+gzip: 39.6 kB         | min: **9,1 kB** (**91% smaller**) <br> min+gzip: **3.6 kB** (**90% smaller**)                             |
 
-We've tried to minimize breaking changes. Almost all composable utilities have been ported for backward compatibility, and the main changes are in the `app` API.
+> [!NOTE]
+> These benchmarks apply to the H3 core using the Web Standard target and do not include adapters. They are primarily intended for internal optimization purposes. See the [benchmark](https://github.com/h3js/h3/tree/main/test/bench) for details.
+
+## ⬆️ Migration from Version 1
+
+We've tried to minimize breaking changes. Almost all composable utilities have been ported for backward compatibility.
 
 ::read-more{to="/migration"}
-Check out new v2 [Migration Guide](/migration).
+Check out [Migration Guide](/migration).
 ::
 
-## Unified H(ttp) Server Tools
+## 🙌 Unified H(ttp) Server Tools
 
-H3 and related projects moved to a dedicated [Github org](https://github.com/h3js) and [h3.dev](https://h3.dev) domain.
+H3 and related projects moved to a dedicated [github org](https://github.com/h3js) and new [h3.dev](https://h3.dev) domain (thanks to the donation from [syntax.fm](https://syntax.fm/) and other [sponsors](/#sponsors) 💛).
 
-Under the H3 umbrella, we maintain several key components for universal JavaScript servers. All fully open and usable with or without H3, and with any JavaScript runtime.
+Under the H3 umbrella, we maintain several key components for universal JavaScript servers.
+
+All fully open and usable with **or without** H3, and with any JavaScript runtime.
 
 - [⚡️ h3](https://github.com/h3js/h3): Minimal HTTP framework.
 - [🌳 rou3](https://github.com/h3js/rou3): Lightweight JavaScript router.
@@ -188,17 +190,20 @@ Under the H3 umbrella, we maintain several key components for universal JavaScri
 
 ## ❤️ Special Thanks
 
-This release would not have been possible without wonderful [contributors](https://github.com/h3js/h3/graphs/contributors), feedback from the [community](https://discord.h3.dev), new runtimes including [Deno](https://deno.com/) and [Bun](https://bun.sh/), and Web-standard frameworks including [Hono](https://hono.dev/) and [Elysia](https://elysiajs.com/), which inspired many of the changes in this version of H3, as well as [sponsors](/#sponsors) who made it possible to work on open source.
+This release would not have been possible without wonderful [contributors](https://github.com/h3js/h3/graphs/contributors), feedback from the [community](https://discord.h3.dev), inspirations from web-standard frameworks including [Hono](https://hono.dev/) and [Elysia](https://elysiajs.com/), and [sponsors](/#sponsors) who made it possible to work on open source.
 
-## Roadmap to v2 Stable
+## 🗺️ Roadmap to v2 (stable)
 
-Next steps:
+**Next steps:**
 
-- Improve documentation and update examples.
-- Gather feedback and more testing.
-- Refine APIs based on community feedback.
-- Ensure ecosystem compatibility and adopt with [Nitro](https://nitro.build) v3.
+- Gather feedback from community.
+- Finalize API updates based on feedbacks.
+- Ensure ecosystem compatibility and upgrade for [Nitro](https://nitro.build) v3.
 
 ::callout{to="https://discord.h3.dev"}
 Join our [Discord](https://discord.h3.dev) to share your experience and feedback!
+::
+
+::read-more{to="/guide"}
+Visit the new [**H3 Guide**](/guide) to get started quickly.
 ::
