--- a/docs/1.guide/900.api/1.h3.md
+++ b/docs/1.guide/900.api/1.h3.md
@@ -70,6 +70,33 @@ const app = new H3()
 
 :read-more{to="/guide/basics/middleware" title="Middleware"}
 
+### `H3.register`
+
+Register a H3 plugin to extend app.
+
+**Example:** Logger plugin.
+
+```js [plugin.mjs]
+import { definePlugin } from "h3";
+
+export const logger = (_options) =>
+  definePlugin((h3) => {
+    if (h3.config.debug) {
+      h3.use((req) => {
+        console.log(`[${req.method}] ${req.url}`);
+      });
+    }
+  });
+```
+
+```js [app.mjs]
+import { H3 } from "h3";
+
+const app = new H3({ debug: true })
+  .register(logger())
+  .all("/**", () => "Hello!");
+```
+
 ### `H3.handler`
 
 An H3 [event handler](/guide/basics/handler) useful to compose multiple H3 app instances.
@@ -117,6 +144,11 @@ const app = new H3()
 ## `H3` Options
 
 You can pass global app configuration when initializing an app.
+
+Supported options:
+
+- `debug`
+- `plugins`: (see [`app.register`](#h3register) for example).
 
 **Example:** Create an app with debug logging enabled.
 
