refactor: consistent hooks

--- a/docs/1.guide/1.basics/3.middleware.md
+++ b/docs/1.guide/1.basics/3.middleware.md
@@ -88,13 +88,13 @@ app.use(
 );
 
 app.use(
-  onResponse((event, { body }) => {
+  onResponse((response, event) => {
     console.log(`[${event.req.method}] ${event.url.pathname} ~>`, body);
   }),
 );
 
 app.use(
-  onError((event, error) => {
+  onError((error, event) => {
     console.log(
       `[${event.req.method}] ${event.url.pathname} !! ${error.message}`,
     );
