--- a/docs/1.guide/900.api/1.h3.md
+++ b/docs/1.guide/900.api/1.h3.md
@@ -171,14 +171,14 @@ These hooks are called for every request and can be used to add global logic to 
 
 ```js
 const app = new H3({
-  onError: (error) => {
-    console.error(error);
-  },
   onRequest: (event) => {
-    console.log("Request:", event.path);
+    console.log("Request:", event.req.url);
   },
-  onResponse: (event) => {
-    console.log("Response:", event.path);
+  onResponse: (response, event) => {
+    console.log("Response:", event.path, response.status);
+  },
+  onError: (error, event) => {
+    console.error(error);
   },
 });
 ```
