refactor: more ergonomic `definePlugin` + docs

--- a/docs/1.guide/900.api/1.h3.md
+++ b/docs/1.guide/900.api/1.h3.md
@@ -74,28 +74,7 @@ const app = new H3()
 
 Register a H3 plugin to extend app.
 
-**Example:** Logger plugin.
-
-```js [plugin.mjs]
-import { definePlugin } from "h3";
-
-export const logger = (_options) =>
-  definePlugin((h3) => {
-    if (h3.config.debug) {
-      h3.use((req) => {
-        console.log(`[${req.method}] ${req.url}`);
-      });
-    }
-  });
-```
-
-```js [app.mjs]
-import { H3 } from "h3";
-
-const app = new H3({ debug: true })
-  .register(logger())
-  .all("/**", () => "Hello!");
-```
+:read-more{to="/guide/advanced/plugins" title="Plugins"}
 
 ### `H3.handler`
 
@@ -148,13 +127,7 @@ You can pass global app configuration when initializing an app.
 Supported options:
 
 - `debug`
-- `plugins`: (see [`app.register`](#h3register) for example).
-
-**Example:** Create an app with debug logging enabled.
-
-```js
-const app = new H3({ debug: true });
-```
+- `plugins`: (see [plugins](/guide/advanced/plugins) for more information)
 
 > [!IMPORTANT]
 > Enabling `debug` option, sends important stuff like stack traces in error responses. Only enable during development.
