--- a/docs/99.blog/2.v2-beta.md
+++ b/docs/99.blog/2.v2-beta.md
@@ -1,5 +1,5 @@
 ---
-date: 2025-06-09
+date: 2025-06-10
 category: release
 authors:
   - name: Pooya Parsa
@@ -14,24 +14,29 @@ authors:
 Visit the new [**H3 Guide**](/guide) to get started quickly.
 ::
 
-Around five years ago in late 2020, H3 was born during the rise of edge workers. Early H3 versions, using [unjs/unenv](https://github.com/unjs/unenv) and [Nitro](https://nitro.build), allowed deployments to run directly in worker environments with Node.js compatibility. Since [v1.8](/blog/v1.8), H3 has enhanced its web standards compatibility.
+H3 started in late 2020, during the rise of edge workers. With H3 + [unjs/unenv](https://github.com/unjs/unenv), we could run [Nitro](https://nitro.build) deployments in worker environments with Node.js compatibility, best of both worlds! Since [v1.8](/blog/v1.8), H3 has improved its support for web standards.
 
-H3 v1 was primarily based on Node.js APIs with a compatibility layer for web standards. Logical choice at the time, given Node.js's popularity amongst JavaScript server runtimes.
+But still, H3 was primarily based on Node.js APIs with a compatibility layer for web standards. Logical choice at the time, given Node.js's popularity amongst JavaScript server runtimes.
 
-Thanks to evolving web standards by initiatives like [WinterTC](https://wintertc.org/) and runtime support in [Deno](https://deno.com/), [Bun](https://bun.sh/), and the latest [Node.js](https://nodejs.org/en), ecosystem is ready to embrace web standards for server development. Benefits include:
+Thanks to evolving web standards by initiatives like [WinterTC](https://wintertc.org/) and runtime support in [Deno](https://deno.com/), [Bun](https://bun.sh/), and the latest [Node.js](https://nodejs.org/en), ecosystem is ready to embrace web standards first class for server development. Benefits include:
 
-- ✅ Cross-runtime interoperability (Node.js, Deno, Bun, Workers, etc.)
-- ✅ Cross-framework compatibility (H3, Hono, Elysia, etc.)
-- ✅ Cross-environment compatibility (shared and familiar code between frontend and backend)
-- ✅ Easier server API testing
+- Cross-runtime interoperability (Node.js, Deno, Bun, Workers, etc.)
+- Cross-framework compatibility (H3, Hono, Elysia, etc.)
+- Cross-environment compatibility (shared and familiar code between frontend and backend)
+- Leverage more of runtime native primitives like (Request, URL, Headers, etc.)
+- Easier API testing
 
 ## 💥 Srvx: Universal Web Server API
 
-A major challenge is that Node.js lacks built-in support for web-standard HTTP servers. For `node:http` compatibility, an adapter is needed to bridge Node.js `IncomingMessage` to web `Request`, and to handle web `Response` via Node.js `ServerResponse`. We have implemented a [compatibility layer](https://srvx.h3.dev/guide/node) that brdiges interfaces and achieves up to **90%** of `node:http` performance. Best in class for performance when compared to alternatives as of writing this post (see [benchmarks](https://github.com/h3js/srvx/tree/main/test/bench-node)).
+A major challenge was that Node.js lacks built-in support for web-standard HTTP servers. For `node:http` compatibility, an adapter is needed to bridge Node.js `IncomingMessage` to web `Request`, and to handle web `Response` via Node.js `ServerResponse`. We have implemented a [compatibility layer](https://srvx.h3.dev/guide/node) that bridges interfaces and achieves **up to 96.98% of native `node:http` performance** (see [benchmarks](https://github.com/h3js/srvx/tree/main/test/bench-node)).
 
 Runtimes such as [Deno](https://deno.com/), [Bun](https://bun.sh/), and Edge Workers pioneered the adoption of web standards for servers, but they did not agree on the same interface due to lack of enough specs. So how do you access the client IP address and additional context? How do you set the server port and TLS options? How do you handle WebSocket upgrades? Each runtime created its own API.
 
-We have created [💥 srvx](https://srvx.h3.dev): A unified layer that works everywhere almost exactly the same. Compatible with Deno, Bun, Node.js, Service Workers, and Edge Workers.
+We have created [💥 srvx](https://srvx.h3.dev): A unified layer that works everywhere exactly the same. Compatible with Deno, Bun, Node.js, Service Workers, Edge Workers.
+
+<details>
+
+<summary>Example</summary>
 
 ```js
 // Dynamic adapter will be used based export conditions of each runtime
@@ -47,6 +52,8 @@ serve({
 });
 ```
 
+</details>
+
 > [!TIP]
 > With [💥 srvx](https://srvx.h3.dev) unifying runtime differences, H3 can remain simpler, focusing exclusively on web standard APIs.
 
@@ -54,12 +61,12 @@ serve({
 
 We worked hard to minimize and simplify H3’s scope.
 
-- 🚀 Web-standard server optimized for [performance](#bare-metal-performance).
+- 🪶 Optimized for performances, [lighter](#lighter-than-a-feather) than a feather.
 - 👌 Intuitive [typed handlers](/guide/basics/handler), [responses](/guide/basics/response) and [errors](/guide/basics/error).
+- 🧩 Reusable [middleware](/guide/basics/middleware) and [plugins](/guide/advanced/plugins).
 - 🌳 Fast [routing](/guide/basics/routing).
-- ⛓️ [Middleware](/guide/basics/middleware) for request, response, and error interception.
-- ➕ Built-in treeshakable [utilities](/utils).
-- ❤️ Maximum compatibility with different runtimes and frameworks.
+- ➕ Built-in [utilities](/utils).
+- ❤️ Maximum [compatibility](/guide/api/h3#h3mount) based on web standards.
 
 ```js
 import { H3, serve } from "h3";
@@ -69,33 +76,72 @@ const app = new H3().get("/", () => "⚡️ Tadaa!");
 serve(app, { port: 3000 });
 ```
 
-## ✅ Web Standard Event Context
+## 🪶 Lighter Than a Feather
 
-H3 embraces web platform APIs such as [Request](https://developer.mozilla.org/en-US/docs/Web/API/Request), [Response](https://developer.mozilla.org/en-US/docs/Web/API/Response), [URL](https://developer.mozilla.org/en-US/docs/Web/API/URL), and [Headers](https://developer.mozilla.org/en-US/docs/Web/API/Headers), minimizing additional conventions in context API.
+We approached benchmarking with a new method that focuses on measuring the overhead introduced by the framework itself, rather than the network layer. Our goal is to optimize all relevant measurements together, making the numbers as close as possible to a baseline where no framework is added or used. This method allowed H3 to achieve optimized latency improvements per request and a dramatically smaller core bundle size.
+
+| Measurement      | H3 v1                                       | 🚀 H3 v2                                                                                                                                                                              |
+| ---------------- | ------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| Request Handling | Node: 36 µs <br> Bun: 27 µs <br> Deno: 7 ms | Node: **7 µs** (**5x faster**) <br> Bun: **3 µs** (**9x faster**) <br> Deno: **1.2 µs** (**156x faster**)                                                                             |
+| Bundle Size      | min: 101 kB <br> min+gzip: 39.6 kB          | min: **9,1 kB** (**91% smaller**) <br> min+gzip: **3.6 kB** (**90% smaller**) <br> min: **5.2 kB** / min+gzip: **2.1 kB** ([fetchable](/guide/basics/handler#handler-fetch) handlers) |
+
+> [!TIP]
+> H3 v2 performance is nearly identical to plain `fetch` handler with `new URL(req.url).pathname` for routing. In other words, you get the benefits of H3 with nearly zero performance cost!
+
+> [!NOTE]
+> Benchmarks apply to the H3 core using the Web Standard target and do not include adapters. They are primarily intended for internal optimization purposes. See the [benchmark](https://github.com/h3js/h3/tree/main/test/bench) for details and [srvx benchmarks](https://github.com/h3js/srvx/tree/main/test/bench-node) for Node.js adapter performances.
+
+## ✅ Typed Web Standards
+
+H3 adopts web standard APIs such as [Request](https://developer.mozilla.org/en-US/docs/Web/API/Request), [Response](https://developer.mozilla.org/en-US/docs/Web/API/Response), [URL](https://developer.mozilla.org/en-US/docs/Web/API/URL), and [Headers](https://developer.mozilla.org/en-US/docs/Web/API/Headers), without introducing new conventions on top of the standards.
+
+We have launched a new initiative to strongly type Web APIs: [✅ fetchdts](https://github.com/unjs/fetchdts). Integrated into the H3, now we combine the best of both worlds—standards and the convenience of types.
 
 ```js
-app.any("/**", async (event) => {
-  const { pathname } = event.url; // Fast URL parsing
+import { defineHandler } from "h3";
+
+const handler = defineHandler(async (event) => {
+  // URL Parsing
+  const { pathname, searchParams } = event.url;
+
+  // Access to request headers (try auto-completion in editor!)
   const accept = event.req.headers.get("Accept");
 
+  // Read body
   const bodyStream = await event.req.body;
   const bodyText = await event.req.text();
   const bodyJSON = await event.req.json();
   const bodyFormData = await event.req.formData();
 
+  // Access to runtime specific context
   const { deno, bun, node } = event.req.runtime;
 
+  // Prepare response (h3 does this smartly)
   event.res.headers.set("Content-Type", "application/json");
 
   return { hello: "web" };
 });
 ```
 
-## ⛓️ Chainable Middleware
+Now go ahead and call handler [`.fetch`](/guide/basics/handler#handler-fetch):
 
-H3 now offers an ergonomic, composable way to chain middleware using `next()` function (inspired by [Hono middleware](https://hono.dev/docs/guides/middleware) 💛):
+```js
+const response = await handler.fetch("/");
 
-```js [global middleware]
+// 🧙 Typed response: { hello: string; }
+const json = await response.json();
+```
+
+> [!TIP]
+> You can directly use event handlers as a standalone, even smaller web handlers without h3 core!
+
+## 🧩 Middleware and Plugins
+
+H3 now offers an ergonomic, composable way to chain middleware using `next()` function (inspired by [Hono middleware](https://hono.dev/docs/guides/middleware) 💛).
+
+Additionally, we have introduced a simple yet powerful pattern to extend H3 apps using reusable [plugins](/guide/advanced/plugins).
+
+```js [middleware]
 import { H3 } from "h3";
 
 const app = new H3().use(async (event, next) => {
@@ -108,10 +154,10 @@ const app = new H3().use(async (event, next) => {
 });
 ```
 
-```js [handler middleware]
-import { defineEventHandler, basicAuth } from "h3";
+```js [basic auth]
+import { defineHandler, basicAuth } from "h3";
 
-export default defineEventHandler({
+export default defineHandler({
   middleware: [basicAuth({ password: "test" })],
   handler: (event) => `Hello ${event.context.basicAuth?.username}!`,
 });
@@ -131,7 +177,7 @@ const app = new H3().use(
 import { H3, onResponse } from "h3";
 
 const app = new H3().use(
-  onResponse((event, { body }) => {
+  onResponse((response, event) => {
     console.log(`Response: [${event.req.method}] ${event.url.pathname}`, body);
   }),
 );
@@ -141,7 +187,7 @@ const app = new H3().use(
 import { H3, onError } from "h3";
 
 const app = new H3().use(
-  onError((event, error) => {
+  onError((error, event) => {
     console.error(
       `[${event.req.method}] ${event.url.pathname} !! ${error.message}`,
     );
@@ -149,33 +195,34 @@ const app = new H3().use(
 );
 ```
 
+```js [plugins]
+import { H3, serve, definePlugin } from "h3";
+
+const logger = definePlugin((h3, _options) => {
+  if (h3.config.debug) {
+    h3.use((req) => {
+      console.log(`[${req.method}] ${req.url}`);
+    });
+  }
+});
+
+const app = new H3({ debug: true })
+  .register(logger())
+  .all("/**", () => "Hello!");
+```
+
 > [!NOTE]
 > Accepting `next` callback is optional. Middleware can be written like v1 without returning a response.
 
-## 🔥 Bare-Metal Performance
-
-We approached benchmarking with a new method that focuses on measuring the overhead introduced by the framework itself, rather than the network layer. Our goal is to optimize all relevant measurements together, making the numbers as close as possible to a baseline where no framework is added or used. This method allowed H3 to achieve optimized latency improvements per request and a dramatically smaller core bundle size.
-
-> [!TIP]
-> H3 v2 performance is nearly identical to plain `fetch` handler with `new URL(req.url).pathname` for routing. In other words, you get the benefits of H3 with nearly zero performance cost!
-
-| Measurement      | H3 v1                                      | 🚀 H3 v2                                                                                                  |
-| ---------------- | ------------------------------------------ | --------------------------------------------------------------------------------------------------------- |
-| Request Handling | Node: 36 µs <br> Bun: 27 µs <br> Deno 7 ms | Node: **7 µs** (**5x faster**) <br> Bun: **3 µs** (**9x faster**) <br> Deno: **1.2 µs** (**156x faster**) |
-| App Bundle Size  | min: 101 kB <br> min+gzip: 39.6 kB         | min: **9,1 kB** (**91% smaller**) <br> min+gzip: **3.6 kB** (**90% smaller**)                             |
-
-> [!NOTE]
-> These benchmarks apply to the H3 core using the Web Standard target and do not include adapters. They are primarily intended for internal optimization purposes. See the [benchmark](https://github.com/h3js/h3/tree/main/test/bench) for details.
-
 ## ⬆️ Migration from Version 1
 
-We've tried to minimize breaking changes. Almost all composable utilities have been ported for backward compatibility.
+We've tried to minimize breaking changes. Most of utilities preserved backward compatibility.
 
 ::read-more{to="/migration"}
 Check out [Migration Guide](/migration).
 ::
 
-## 🙌 Unified H(ttp) Server Tools
+## 🙌 Unified H(TTP) Server Tools for Everyone
 
 H3 and related projects moved to a dedicated [github org](https://github.com/h3js) and new [h3.dev](https://h3.dev) domain (thanks to the donation from [syntax.fm](https://syntax.fm/) and other [sponsors](/#sponsors) 💛).
 
@@ -183,10 +230,10 @@ Under the H3 umbrella, we maintain several key components for universal JavaScri
 
 All fully open and usable with **or without** H3, and with any JavaScript runtime.
 
-- [⚡️ h3](https://github.com/h3js/h3): Minimal HTTP framework.
-- [🌳 rou3](https://github.com/h3js/rou3): Lightweight JavaScript router.
+- [⚡️ h3](https://github.com/h3js/h3): Minimal HTTP Framework.
+- [🌳 rou3](https://github.com/h3js/rou3): Lightweight JavaScript Router.
 - [💥 srvx](https://srvx.h3.dev): Universal Web-based Server API.
-- [🔌 crossws](https://crossws.h3.dev): Cross-platform WebSocket server.
+- [🔌 crossws](https://crossws.h3.dev): Cross-platform WebSocket support.
 
 ## ❤️ Special Thanks
 
