Add Apitally to community utils page in docs

--- a/docs/2.utils/99.community.md
+++ b/docs/2.utils/99.community.md
@@ -14,3 +14,9 @@ This section is placeholder for any new H3 version 2 compatible community librar
 
 > [!TIP]
 > 💛 PR is more than welcome to list yours.
+
+## `apitally`
+
+[Apitally](https://apitally.io/h3) is a simple API monitoring, analytics, and request logging tool with a plugin for H3. See setup guide [here](https://docs.apitally.io/frameworks/h3).
+
+:read-more{to="https://github.com/apitally/apitally-js"}
